[build-system]
requires = ["setuptools"]

[project]
name = "fake-bpy-module"
description = "Collection of the fake Blender Python API module for the code completion."
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "nutti"},
    {email = "nutti.metro@gmail.com"}
]
maintainers = [
    {name = "nutti"},
    {email = "nutti.metro@gmail.com"}
]
classifiers = [
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nutti/fake-bpy-module"
Documentation = "https://github.com/nutti/fake-bpy-module/blob/main/README.md"
Source = "https://github.com/nutti/fake-bpy-module"
Download = "https://github.com/nutti/fake-bpy-module/releases"
"Bug Tracker" = "https://github.com/nutti/fake-bpy-module/issues"
"Release Notes" = "https://github.com/nutti/fake-bpy-module/blob/main/CHANGELOG.md"

[tool.setuptools]
platforms = ["Windows", "Linux", "Mac OS-X"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 80
exclude = [
    "tests/python/fake_bpy_module_test/fake_bpy_module_test/*_test_data/*",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "UP015",
    "COM812",
    "ANN101",
    "PT009",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "Q000",
    "S101",
    "FBT001",
    "FBT002",
    "FBT003",
    "TRY003",
    "EM101",
    "EM102",
    "EM103",
    "T201",
    "PT027",
    "TD002",
    "TD003",
    "FIX002",
    "PLR2004",
    "SIM102",
    "INP001",
    # flake8-pyi
    "PYI011",
    "PYI014",
    "PYI018",
    "PYI021",
    "PYI054",
]

[tool.ruff.lint.mccabe]
max-complexity = 100

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 100
max-statements = 200
max-returns = 70
